fix dialog visibility

--- a/src/features/layout/Modal.module.scss
+++ b/src/features/layout/Modal.module.scss
@@ -42,4 +42,8 @@ dialog.modal {
     backdrop-filter: blur(0.75px);
     background: rgba(0, 0, 0, 0.4);
   }
+
+  &:not([open]) {
+    display: none;
+  }
 }
